--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -7,7 +7,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li *ngFor="let menu of menus" class="nav-item">
-          <a class="nav-link" [ngClass]="{'active': menu.isActive}" [routerLink]="[menu.path]" routerLinkActive="router-link-active" >{{menu.label}}</a>
+          <a 
+            class="nav-link cursor-pointer"
+            aria-current="page"
+            routerLinkActive="active"
+            #rla{{menu.path}}="routerLinkActive"
+            [routerLink]="menu.path"
+          >
+            {{menu.label}}
+          </a>
         </li>
       </ul>
     </div>
