--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,1 +1,48 @@
-<p>users works!</p>
+<div class="d-flex flex-column vh-100 mt-3 mt-md-5">
+  <div class="col-12 bg-color-quinary rounded-top p-3 d-flex flex-column flex-md-row justify-content-between align-items-center">
+    <span class="ff-poppins fw-600 fs-28 text-white me-auto">
+      Users Management
+    </span>
+    <button class="btn-primary ff-poppins ms-auto ms-md-0 mt-3 mt-md-0">
+      add user
+    </button>
+  </div>
+  <div class="col-12 bg-color-tertiary rounded-bottom p-3">
+    <div class="table-responsive">
+      <table class="table table-striped table-hover ff-poppins">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th class="mw-10">First</th>
+            <th class="mw-10">Last</th>
+            <th class="mw-20">Email</th>
+            <th class="mw-10">Gender</th>
+            <th class="mw-20">Address</th>
+            <th class="text-center mw-15">Action</th>
+          </tr>
+        </thead>
+        <ng-template #emptyUsers>
+          <tbody>
+            <tr>
+              <td colspan="7" class="text-center">Data is empty..</td>
+            </tr>
+          </tbody>
+        </ng-template>
+        <tbody *ngIf="users.length > 0; else emptyUsers">
+          <tr *ngFor="let user of users; let i = index">
+            <td>{{ i + 1 }}</td>
+            <td>{{ user.firstName || '-' }}</td>
+            <td>{{ user.lastName || '-' }}</td>
+            <td>{{ user.email }}</td>
+            <td>{{ user.gender || '-' }}</td>
+            <td>{{ user.address.address || '-' }}</td>
+            <td class="text-center">
+              <button class="btn-primary me-1">edit</button>
+              <button class="btn-primary-outline">delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
