--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,224 @@
 /* You can add global styles to this file, and also import other style files */
+$color-primary: #5EAAA8;      // Teal soft (segar & modern)
+$color-primary-hover: #166e6b;      // Teal soft hover (segar & modern)
+$color-secondary: #A3D2CA;    // Mint green (netral, kalem)
+$color-secondary-hover: #8aaea8;    // Mint green hover (netral, kalem)
+$color-tertiary: #F7F7F7;     // Light grey/white (buat background adem)
+$color-quaternary: #056676;   // Deep sea blue (buat teks/aksen elegan)
+$color-quinary: #3693d1;      // Cool steel blue (buat outline/shadow)
+
 .cursor-pointer {
   cursor: pointer;
+}
+.mw-5 {
+  min-width: 5rem !important;
+}
+.mw-10 {
+  min-width: 10rem !important;
+}
+.mw-15 {
+  min-width: 15rem !important;
+}
+.mw-20 {
+  min-width: 20rem !important;
+}
+
+// _____________________________________________ background-color variant
+.bg-color-primary {
+  background-color: $color-primary;
+}
+.bg-color-secondary {
+  background-color: $color-secondary;
+}
+.bg-color-tertiary {
+  background-color: $color-tertiary;
+}
+.bg-color-quaternary {
+  background-color: $color-quaternary;
+}
+.bg-color-quinary {
+  background-color: $color-quinary;
+}
+
+
+
+
+// _____________________________________________ text-color variant
+.tc-primary {
+  color: $color-primary;
+}
+.tc-secondary {
+  color: $color-secondary;
+}
+.tc-tertiary {
+  color: $color-tertiary;
+}
+.tc-quaternary {
+  color: $color-quaternary;
+}
+.tc-quinary {
+  color: $color-quinary;
+}
+
+
+
+
+
+// _____________________________________________ font-family variant
+.ff-poppins {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+}
+.ff-roboto {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+}
+
+
+
+
+// _____________________________________________ font-weight variant
+.fw-100 {
+  font-weight: 100;
+}
+.fw-200 {
+  font-weight: 200;
+}
+.fw-300 {
+  font-weight: 300;
+}
+.fw-400 {
+  font-weight: 400;
+}
+.fw-500 {
+  font-weight: 500;
+}
+.fw-600 {
+  font-weight: 600;
+}
+.fw-700 {
+  font-weight: 700;
+}
+.fw-800 {
+  font-weight: 800;
+}
+.fw-900 {
+  font-weight: 900;
+}
+
+
+
+
+// _____________________________________________ font-size variant
+.fs-8 {
+  font-size: 8px;
+}
+.fs-10 {
+  font-size: 10px;
+}
+.fs-12 {
+  font-size: 12px;
+}
+.fs-14 {
+  font-size: 14px;
+}
+.fs-16 {
+  font-size: 16px;
+}
+.fs-18 {
+  font-size: 18px;
+}
+.fs-20 {
+  font-size: 20px;
+}
+.fs-22 {
+  font-size: 22px;
+}
+.fs-24 {
+  font-size: 24px;
+}
+.fs-26 {
+  font-size: 26px;
+}
+.fs-28 {
+  font-size: 28px;
+}
+.fs-30 {
+  font-size: 30px;
+}
+.fs-32 {
+  font-size: 32px;
+}
+.fs-34 {
+  font-size: 34px;
+}
+.fs-36 {
+  font-size: 36px;
+}
+.fs-38 {
+  font-size: 38px;
+}
+.fs-40 {
+  font-size: 40px;
+}
+.fs-42 {
+  font-size: 42px;
+}
+.fs-44 {
+  font-size: 44px;
+}
+.fs-46 {
+  font-size: 46px;
+}
+.fs-48 {
+  font-size: 48px;
+}
+.fs-50 {
+  font-size: 50px;
+}
+
+
+
+
+// _____________________________________________ button variant
+.btn-primary {
+  height: 35px;
+  background-color: $color-primary !important;
+  color: $color-tertiary !important;
+  padding-left: 25px;
+  padding-right: 25px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  transition: all ease-in-out 0.2s;
+}
+.btn-primary:hover {
+  background-color: $color-primary-hover !important;
+  transition: all ease-in-out 0.2s;
+}
+.btn-primary[disabled] {
+  cursor: not-allowed; 
+  opacity: 0.5; 
+}
+
+
+.btn-primary-outline {
+  height: 35px;
+  background-color: $color-tertiary !important;
+  color: $color-primary !important;
+  border: $color-primary 1px solid;
+  padding-left: 25px;
+  padding-right: 25px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: all ease-in-out 0.2s;
+}
+.btn-primary-outline:hover {
+  background-color: $color-primary-hover !important;
+  color: #F7F7F7 !important;
+  transition: all ease-in-out 0.2s;
+}
+.btn-primary-outline[disabled] {
+  cursor: not-allowed; 
+  opacity: 0.5; 
 }
