--- a/src/app/pages/employee/components/list/employee-list.component.html
+++ b/src/app/pages/employee/components/list/employee-list.component.html
@@ -3,11 +3,25 @@
     <span class="ff-poppins fw-600 fs-28 text-white me-auto">
       Employee Management
     </span>
-    <button class="btn-primary ff-poppins ms-auto ms-md-0 mt-3 mt-md-0">
+    <button class="btn-primary ff-poppins ms-auto ms-md-0 mt-3 mt-md-0" routerLink="form">
       add employee
     </button>
   </div>
   <div class="col-12 border border-start border-end py-3 ps-3 d-flex flex-column">
+    <!-- handle Error -->
+    @if (errorMessage && errorMessage.statusCode) {
+    <div class="alert d-flex align-items-center" role="alert"
+      [ngClass]="errorMessage && errorMessage.statusCode === 400 ? 'alert-warning' : 'alert-danger'"
+    >
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+      </svg>
+      <div>
+        {{ errorMessage && errorMessage.message ? errorMessage.message : '' }}
+      </div>
+    </div>
+    }
+   
     <!-- Search keyword -->
     <div class="col-md-6 col-lg-4 align-self-start">
       <input type="text" class="form-control" placeholder="Search employee" [formControl]="keyword" />
@@ -67,11 +81,16 @@
               showing
           </div>
           <div class="col pr-0 w-100">
-            <select class="form-select" aria-label="Default select example" [(ngModel)]="selectRowsPerPage.value" (change)="onChangeRowsData($event)">
-              @for (item of itemsRowPerPage; track $index) {
-                <option [value]="item">{{ item }}</option>
-              }
-            </select>
+            <ng-select
+              class="form-control"
+              [items]="itemsRowPerPage"
+              placeholder="10"
+              [searchable]="true"
+              [formControl]="selectRowsPerPage"
+              [clearable]="true"
+              (change)="onChangeRowsData($event)"
+              >
+            </ng-select>
           </div>
           <div class="col-12 col-md-4 ps-0 ps-md-2">
             data(s) from {{ pagingData && pagingData.totalRows ? pagingData.totalRows : 0}}
