--- a/src/app/pages/employee/components/form/employee-form.component.html
+++ b/src/app/pages/employee/components/form/employee-form.component.html
@@ -166,3 +166,27 @@
     </form>
   </div>
 </div>
+
+
+<div
+  class="modal fade"
+  id="confirmationModal"
+  tabindex="-1"
+  aria-labelledby="confirmationModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmationModalLabel">{{ isEdit ? 'Update Success' : 'Create Success'}}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Your request successfully
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="backToList()">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
