--- a/src/styles.scss
+++ b/src/styles.scss
@@ -261,3 +261,47 @@ ng-select.form-control {
   cursor: not-allowed; 
   opacity: 0.5; 
 }
+
+.btn-secondary {
+  height: 35px;
+  background-color: $color-secondary !important;
+  color: $color-tertiary !important;
+  padding-left: 25px;
+  padding-right: 25px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  transition: all ease-in-out 0.2s;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-secondary:hover {
+  background-color: $color-secondary-hover !important;
+  transition: all ease-in-out 0.2s;
+}
+.btn-secondary[disabled] {
+  cursor: not-allowed; 
+  opacity: 0.5; 
+}
+
+
+.wrapper-avatar {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 27%;
+  height: 85%;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.avatar {
+  width: 200px;
+  height: 200px;
+  background-color: $color-tertiary;
+  border-radius: 50%;
+}
