feat: implement login form

--- a/src/app/pages/employee/components/detail/employee-detail.component.html
+++ b/src/app/pages/employee/components/detail/employee-detail.component.html
@@ -1,9 +1,8 @@
 <div class="d-flex flex-column mt-3 mt-md-5 mx-3 mx-lg-0 position-relative mb-5">
   <div class="wrapper-avatar">
     <img src="assets/images/user.png" alt="Avatar" class="avatar d-none d-lg-block" />
-    <!-- <div class="avatar"></div> -->
   </div>
-  <div class="col-12 bg-color-quinary rounded-top p-3 text-end">
+  <div class="col-12 bg-color-quaternary rounded-top p-3 text-end">
     <span class="ff-poppins fw-600 fs-28 text-white">
       Detail Employee
     </span>
