--- a/src/app/pages/employee/components/list/employee-list.component.html
+++ b/src/app/pages/employee/components/list/employee-list.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column vh-100 mt-3 mt-md-5">
-  <div class="col-12 bg-color-quinary rounded-top p-3 d-flex flex-column flex-md-row justify-content-between align-items-center">
+  <div class="col-12 bg-color-quaternary rounded-top p-3 d-flex flex-column flex-md-row justify-content-between align-items-center">
     <span class="ff-poppins fw-600 fs-28 text-white me-auto">
       Employee Management
     </span>
@@ -41,7 +41,7 @@
             <th class="mw-10">Birthdate</th>
             <th class="mw-15">Salary</th>
             <th class="mw-10">Status</th>
-            <th class="mw-10">Group</th>
+            <th class="mw-15">Group</th>
             <th class="mw-15">Description</th>
             <th class="text-center mw-15">Action</th>
           </tr>
