--- a/src/app/pages/employee/components/form/employee-form.component.html
+++ b/src/app/pages/employee/components/form/employee-form.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column mt-3 mt-md-5 mx-3 mx-lg-0">
-  <div class="col-12 bg-color-quinary rounded-top p-3">
+  <div class="col-12 bg-color-quaternary rounded-top p-3">
     <span class="ff-poppins fw-600 fs-28 text-white me-auto">
       Form Employee Management
     </span>
