--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column vh-100 mt-3 mt-md-5">
-  <div class="col-12 bg-color-quinary rounded-top p-3 d-flex flex-column flex-md-row justify-content-between align-items-center">
+  <div class="col-12 bg-color-quaternary rounded-top p-3 d-flex flex-column flex-md-row justify-content-between align-items-center">
     <span class="ff-poppins fw-600 fs-28 text-white me-auto">
       Users Management
     </span>
