fix: routing apps and update readme file

--- a/src/app/pages/auth/login/component/login.component.html
+++ b/src/app/pages/auth/login/component/login.component.html
@@ -9,7 +9,7 @@
           Welcome Back!
         </span>
         <span class="ff-poppins fw-400 fs-14 tc-quaternary text-center mb-4">
-          type your account
+          Enter your account
         </span>
 
         <!-- handle Error -->
