--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -36,7 +36,7 @@
             <td>{{ user.email }}</td>
             <td>{{ user.gender || '-' }}</td>
             <td>{{ user.address.address || '-' }}</td>
-            <td class="text-center">
+            <td class="text-center d-flex flex-row">
               <button class="btn-primary me-1">edit</button>
               <button class="btn-primary-outline">delete</button>
             </td>
