--- a/src/app/pages/employee/components/detail/employee-detail.component.html
+++ b/src/app/pages/employee/components/detail/employee-detail.component.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="col-12 col-md-2 order-0 order-md-2 mb-2 mb-md-0 d-flex flex-column">
-          <a routerLink="/employees/form/{{ employee.username }}" class="w-100 btn-primary ff-poppins">
+          <a routerLink="/pages/employees/form/{{ employee.username }}" class="w-100 btn-primary ff-poppins">
             <i class="bi bi-pencil-square me-1"></i> Edit
           </a>
         </div>
@@ -78,7 +78,7 @@
   </div>
   <div class="col-12 d-flex justify-content-end mt-3">
     <div class="col-4 col-md-2">
-      <a routerLink="/employees" [queryParams]="backQueryParams" class="btn-primary-outline ff-poppins">
+      <a routerLink="/pages/employees" [queryParams]="backQueryParams" class="btn-primary-outline ff-poppins">
         Ok
       </a>
     </div>
