--- a/src/app/pages/employee/components/form/employee-form.component.html
+++ b/src/app/pages/employee/components/form/employee-form.component.html
@@ -152,7 +152,7 @@
 
         <div class="col-12 mb-3 d-flex flex-column flex-md-row justify-content-end">
           <div class="col-12 col-md-3 col-lg-2 me-2 mb-2 mb-md-0">
-            <a class="btn-primary-outline ff-poppins" routerLink="/employees">
+            <a class="btn-primary-outline ff-poppins" routerLink="/pages/employees">
               Cancel
             </a>
           </div>
